<resources>
    <string name="search_fragment">Search Fragment</string>
    <string name="app_name">SeattlePlaceSearch</string>
    <string name="search_hint">Search Venues</string>
    <string name="no_results">No results. Please try another search term.</string>
    <string name="error_msg">Something went wrong. :( Please try another search term.</string>
    <string name="error_msg_details">Something went wrong. Please try again.</string>
    <string name="distance_label">Distance from Seattle: %sm</string>
    <string name="contact">Contact: %s</string>
    <string name="try_again">Try again</string>
    <string name="verified">Verified</string>
    <string name="venue_stats">Venue Stats</string>
    <string name="venue_info">Venue Info</string>
</resources>
