<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSecondary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="24dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/info_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/venue_info"
                    android:textColor="?colorPrimary"
                    android:textSize="24sp"
                    app:drawableStartCompat="@drawable/ic_baseline_location_city_24"
                    app:drawableTint="?colorPrimary" />

                <TextView
                    android:id="@+id/venue_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textColor="?colorSecondaryVariant"
                    tools:text="Starbucks" />

                <TextView
                    android:id="@+id/venue_full_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:textColor="?colorSecondaryVariant"
                    tools:text="94 Pike St #34\nSeattle, WA 98101" />

                <TextView
                    android:id="@+id/venue_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:textColor="?colorSecondaryVariant"
                    tools:text="Contact: XXX-XXX-XXXX" />

                <TextView
                    android:id="@+id/venue_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:textColor="?colorSecondaryVariant"
                    app:drawableStartCompat="@drawable/ic_baseline_link_24"
                    app:drawableTint="?colorPrimary"
                    tools:text="www.blah.com" />

                <TextView
                    android:id="@+id/venue_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:textColor="?colorSecondaryVariant"
                    tools:text="Coffee Shop" />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/venue_icon"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?colorPrimary"
                android:scaleType="centerCrop"
                android:tint="?colorOnPrimary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.SelectedCornerRadius" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/stats_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/venue_stats"
                    android:textColor="?colorPrimary"
                    android:textSize="24sp"
                    app:drawableStartCompat="@drawable/ic_baseline_star_rate_24"
                    app:drawableTint="?colorPrimary" />

                <TextView
                    android:id="@+id/likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textColor="?colorSecondaryVariant"
                    app:drawableStartCompat="@drawable/ic_baseline_favorite_24"
                    app:drawableTint="?colorPrimary"
                    tools:text="1,928 likes" />

                <TextView
                    android:id="@+id/verified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/verified"
                    android:textColor="?colorSecondaryVariant"
                    app:drawableStartCompat="@drawable/ic_baseline_verified_24"
                    app:drawableTint="?colorPrimary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats_card">

            <ImageView
                android:id="@+id/best_photo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/item_horizontal_spacing_dp"
            android:gravity="center"
            android:text="@string/error_msg_details"
            android:textColor="?colorOnSecondary"
            android:textSize="@dimen/header_text_size_sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_text" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="?colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>